# BossForgeOS

./: .gitignore  .tmp_control_hall_script.js  AGENT_TASK_ASSIGNMENTS.backup.md  AGENT_TASK_ASSIGNMENTS.md  BossCrafts_BossForgeOS_bp.docx  BossCrafts_BossForgeOS_bp.txt  BossCrafts_Lexicon_Thus_Far.docx  BossForgeLauncher.spec  ENTERPRISE_ROADMAP.md  ENTERPRISE_TODO_LIST.md  README.md  archivist_onboarded_projects.json  build_launcher_exe.ps1  launch_anvil_shuttle.py  package-lock.json  requirements.txt  setup_vllm_runtime.cmd  start_bossforge_internal_vllm_wsl.cmd  start_control_hall.cmd  start_daemon.cmd  uninstall_archivist_context_menu.ps1
competitions/windows-sound-system-showdown-race/devlot_submission/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEMO.md  INSTALL.md  RACE_TIMES.md  README.md
competitions/windows-sound-system-showdown-race/devlot_submission/build_clang/: CMakeCache.txt
competitions/windows-sound-system-showdown-race/devlot_submission/build_llvm/: CMakeCache.txt
competitions/windows-sound-system-showdown-race/devlot_submission/build_llvm2/: CMakeCache.txt
competitions/windows-sound-system-showdown-race/devlot_submission/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BossForgeSoundDemo.vcxproj  BossForgeSoundDemo.vcxproj.filters  BossForgeSoundShowdown.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  (+2 more)
core/soundstage/BossForgeOS_SoundStage/: ARCHITECTURE.md  CMakeLists.txt  DEMO.md  INSTALL.md  README-soundstage-daemon.md  README.md  SoundStage.md  ai-plugin.json  eventLog.json  logList.json  soundstage_daemon.py  statusCard.json
(+1068 files in other folders)
